Llamada a la API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div> 
+  LLamada a la API
+  <app-medic-date></app-medic-date>
+</div>
+
 <div class="row text-center">
   <div class="col-md-4">
     <div class="btn-group">
